Dashboard circle width fixed and alignment of bottom icons

--- a/front-end/src/app/components/header-search/header-search.component.scss
+++ b/front-end/src/app/components/header-search/header-search.component.scss
@@ -1,4 +1,4 @@
-form {
+.header-search-form {
     position: relative;
     // top: 50%;
     // left: 50%;
