--- a/front-end/src/app/view-modules/emp-l2/l2-dashboard/l2-dashboard.component.scss
+++ b/front-end/src/app/view-modules/emp-l2/l2-dashboard/l2-dashboard.component.scss
@@ -2,6 +2,7 @@
     min-width: 850px;
     max-width: 1400px;
     display: block;
+    margin:0 auto;
 }
 .db-row{
     display: grid;
@@ -11,31 +12,30 @@
     
 }
 .db-head{
-    background-color: #fff;
-
+    background-color:var(--col-primary-A200);
+    border-radius:15px;
 }
 .db-head-name{
-   color: var(--color-primary);
-   text-decoration: underline;
+   color: var(--col-accent-500);
+text-align: center;
+font-size: 22px;
 }
 .db-total-emp{
-    min-height: 42px;
-    line-height: 42px;
-    border-radius: 42px;
-    font-size: 18px;
-    min-width: 100px;
-    border: 1px solid #aaa;
+    // min-height: 42px;
+    // line-height: 42px;
+    // border-radius: 42px;
+    font-size: 16px;
+    // min-width: 100px;
+    // border: 1px solid #aaa;
     text-align: center;
-    color: var(--color-primary);
-    font-weight: 500;
+    color: var(--col-primary-100);
+    // font-weight: 500;
     align-self: center;
     text-align: left;
-    padding-left: 15px;
+    padding-left: 8px;
     height: auto;
 }
-// .mat-option{
-//     border-radius: 20px;
-// }
+
 .dot {
     height: 12px;
     width: 12px;
@@ -50,11 +50,15 @@
   .mat-icon
   {
     font-size: 3em;
-    color: #5dcbdc;
+    color: #555;
 }
 
 .download-bn:hover{
     cursor: pointer;
-    text-decoration: underline;
+    // text-decoration: underline;
+}
+
+:host ::ng-deep .mat-form-field-appearance-legacy .mat-form-field-underline {
+    background-color: #555;
 }
 
