--- a/front-end/src/assets/scss/_flex.scss
+++ b/front-end/src/assets/scss/_flex.scss
@@ -22,7 +22,9 @@
           display: inline-flex;
     }
 }
-
+.fg-5{
+  gap:5px;    
+}
 .row {
     box-sizing: border-box;
     display: -ms-flexbox;
