--- a/front-end/src/assets/scss/_use-mixins.scss
+++ b/front-end/src/assets/scss/_use-mixins.scss
@@ -21,6 +21,9 @@
 .fw-500{
     font-weight: 500;
 }
+.fw-600{
+    font-weight: 600;
+}
 .fw-700{
     font-weight: 700;
 }
